working on Project constructor
save/load projects from json

save project, save output and variables

show project on load

refactored front-end browse function, added id to project obj, new project selects itself on create in project selector

developing ui

relative paths, auto-save

added kss, working on getting build working

Build Style Guide
* Styleguide builds with static css path atm
* Added data-attr on ui inputs to hold absolute path used for building

project selector, project switching

added stylesheets field

save and load blocks, rendering style guide elements

passing string with styleguide_block function. Not ideal, but works for now

keep project loaded when clicking between tabs, compiled css input

copy and rename compiled css to output dir

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -13,14 +13,13 @@ gem 'rake', '10.0.3'
 
 # sinatra
 gem 'sinatra', '1.4.5'
+gem 'sinatra-asset-pipeline'
 gem 'sinatra-contrib', '1.4.2'
 gem 'sinatra-index'
 gem 'json', '1.8.0'
 
-gem 'sinatra-asset-pipeline'
-gem 'sass'
 gem 'coffee-script'
-
-# html/css/js
 gem 'haml', '4.0.0'
+gem 'kss'
+gem 'sass'
 gem 'uglifier', '1.3.0'
