SQLite and Layout Update
added sqlite, schema, project create and load uses db

CRUD routes for blocks, load, save, create blocks

load/add blocks to ui, crud project routes

block template, update block

use blocks in guide generation, changed to sidebar layout

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -18,6 +18,10 @@ gem 'sinatra-contrib', '1.4.2'
 gem 'sinatra-index'
 gem 'json', '1.8.0'
 
+# sqlite
+gem 'sqlite3'
+gem 'activerecord'
+
 gem 'coffee-script'
 gem 'haml', '4.0.0'
 gem 'kss'
