Haute gem, Blocks section, General UI & UX updates
added haute, color blocks to template

css/sass icons, blocks ui/ux

Delete Projects & Blocks

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -24,6 +24,6 @@ gem 'activerecord'
 
 gem 'coffee-script'
 gem 'haml', '4.0.0'
-gem 'kss'
+gem 'haute', '~> 0.2.1'
 gem 'sass'
 gem 'uglifier', '1.3.0'
